--- a/others/yaml/pod.yaml
+++ b/others/yaml/pod.yaml
@@ -24,6 +24,13 @@ spec:
       - name: all-in-one
         mountPath: "/projected-volume"
         readOnly: true
+    livenessProbe: # liveness探针
+      exec:
+        command:
+        - cat
+        - /tmp/healthy
+      initialDelaySeconds: 5
+      periodSeconds: 5 # 每5s执行一次探针
           
   volumes:
   - name: example-storage
@@ -42,3 +49,4 @@ spec:
     runAsUser: 1000 # 容器里用ps看到的进程的用户ID为1000， id命令的uid
     runAsGroup: 3000 # 进程的组ID为3000，如果不指定，默认为0  id命令的gid
     fsGroup: 2000 # 创建的文件的组ID为2000 id命令的groups
+  serviceAccountName: default # 指定Service Account
